@@ -1,3 +1,10 @@
+2011-06-16  Christopher Faylor  <me.cygwin2011@cgf.cx>
+
+	* fhandler_console.cc (fhandler_console::set_unit): Set
+	pc.file_attributes() to reflect existence.
+	* fhandler.h (fhandler_pty_common::fhandler_pty_common): Ditto.
+	* pinfo.cc (_pinfo::set_ctty): Output device numbers in hex.
+
 2011-06-15  Christopher Faylor  <me.cygwin2011@cgf.cx>
 
 	* errno.cc (EIO): Lowercase "o" representative string.
